force-app/main/default/objects/Financial_Account__c/Financial_Account__c.object-meta.xml
<CustomObject>
    <label>Financial Account</label>
    <pluralLabel>Financial Accounts</pluralLabel>
    <description>Represents customer financial accounts including credit cards, loans, savings accounts, and investments for the Banking Sahayak system.</description>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>