force-app/main/default/objects/Financial_Account__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <description>Type of financial account</description>
    <inlineHelpText>Select the type of financial account</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Car Loan</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Fixed Deposit</fullName>
            </value>
            <value>
                <fullName>Recurring Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>