force-app/main/default/objects/Financial_Account__c/fields/AvailableBalance__c.field-meta.xml
<CustomField>
  <fullName>AvailableBalance__c</fullName>
  <label>Available Balance</label>
  <description>Available balance for withdrawals/credit</description>
  <inlineHelpText>Available balance in INR</inlineHelpText>
  <type>Currency</type>
  <precision>18</precision>
  <scale>2</scale>
</CustomField>