force-app/main/default/objects/Financial_Account__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <description>Current balance of the financial account</description>
    <inlineHelpText>Enter the current balance in INR</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>