force-app/main/default/objects/Financial_Account__c/fields/CreditLimit__c.field-meta.xml
<CustomField>
  <fullName>CreditLimit__c</fullName>
  <label>Credit Limit</label>
  <description>Credit limit for credit card accounts</description>
  <inlineHelpText>Maximum credit limit in INR</inlineHelpText>
  <type>Currency</type>
  <precision>18</precision>
  <scale>2</scale>
</CustomField>