force-app/main/default/objects/Financial_Account__c/fields/FinancialAccountNumber__c.field-meta.xml
<CustomField>
  <fullName>FinancialAccountNumber__c</fullName>
  <label>Financial Account Number</label>
  <description>Bank-assigned account or card number</description>
  <inlineHelpText>Enter the account or card number</inlineHelpText>
  <type>Text</type>
  <length>50</length>
</CustomField>