force-app/main/default/objects/Financial_Account__c/fields/InterestRate__c.field-meta.xml
<CustomField>
  <fullName>InterestRate__c</fullName>
  <label>Interest Rate</label>
  <description>Interest rate for loan or savings (percent)</description>
  <inlineHelpText>Annual interest rate (e.g., 7.25)</inlineHelpText>
  <type>Percent</type>
  <precision>5</precision>
  <scale>2</scale>
</CustomField>