force-app/main/default/objects/Financial_Account__c/fields/OpenDate__c.field-meta.xml
<CustomField>
  <fullName>OpenDate__c</fullName>
  <label>Open Date</label>
  <description>Date when the account was opened</description>
  <inlineHelpText>Enter the account open date</inlineHelpText>
  <type>Date</type>
</CustomField>