force-app/main/default/objects/Financial_Account__c/fields/RemainingTenureMonths__c.field-meta.xml
<CustomField>
    <fullName>RemainingTenureMonths__c</fullName>
    <label>Remaining Tenure (Months)</label>
    <description>Remaining loan tenure in months</description>
    <inlineHelpText>Number of months remaining until loan maturity</inlineHelpText>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>