force-app/main/default/objects/Financial_Account__c/recordTypes/CarLoan.recordType-meta.xml
<RecordType>
  <fullName>Car_Loan</fullName>
  <label>Car Loan</label>
  <description>Record type for Car Loan</description>
  <active>true</active>
  <available>true</available>
</RecordType>