force-app/main/default/objects/Financial_Account__c/recordTypes/CreditCard.recordType-meta.xml
<RecordType>
  <fullName>Credit_Card</fullName>
  <label>Credit Card</label>
  <description>Record type for Credit Card accounts</description>
  <active>true</active>
  <available>true</available>
  <default>true</default>
</RecordType>