force-app/main/default/objects/Financial_Account__c/recordTypes/FixedDeposit.recordType-meta.xml
<RecordType>
  <fullName>Fixed_Deposit</fullName>
  <label>Fixed Deposit</label>
  <description>Record type for Fixed Deposit</description>
  <active>true</active>
  <available>true</available>
</RecordType>