force-app/main/default/objects/Financial_Account__c/recordTypes/HomeLoan.recordType-meta.xml
<RecordType>
  <fullName>Home_Loan</fullName>
  <label>Home Loan</label>
  <description>Record type for Home Loan accounts</description>
  <active>true</active>
  <available>true</available>
</RecordType>