force-app/main/default/objects/Financial_Account__c/recordTypes/MutualFund.recordType-meta.xml
<RecordType>
  <fullName>Mutual_Fund</fullName>
  <label>Mutual Fund</label>
  <description>Record type for Mutual Fund investments</description>
  <active>true</active>
  <available>true</available>
</RecordType>