force-app/main/default/objects/Financial_Account__c/recordTypes/PersonalLoan.recordType-meta.xml
<RecordType>
  <fullName>Personal_Loan</fullName>
  <label>Personal Loan</label>
  <description>Record type for Personal Loan</description>
  <active>true</active>
  <available>true</available>
</RecordType>