force-app/main/default/objects/Financial_Account__c/recordTypes/SavingsAccount.recordType-meta.xml
<RecordType>
  <fullName>Savings_Account</fullName>
  <label>Savings Account</label>
  <description>Record type for Savings Account</description>
  <active>true</active>
  <available>true</available>
</RecordType>